# agenticrun

./: .gitignore  CASPER_BUILDATHON_WINNING_SOLUTION.md
agent-vault/: .env.example  LICENSE  README.md
agent-vault/.github/workflows/: deploy-testnet.yml
agent-vault/agent/: __init__.py  main.py  requirements.txt
agent-vault/agent/agents/: __init__.py  compliance_agent.py  execution_agent.py  risk_agent.py  yield_agent.py
agent-vault/agent/mcp_servers/: __init__.py  casper_mcp.py  data_oracle_mcp.py
agent-vault/contracts/: Cargo.toml
agent-vault/contracts/src/: agent_reputation.rs  lib.rs  portfolio_manager.rs  rwa_registry.rs
agent-vault/demo/: script.md
caspermind/: .env.example  PROJECT_DOCUMENTATION.md  README.md  requirements.txt
caspermind/agents/: compliance_agent.py  governor_agent.py  oracle_agent.py  yield_agent.py
caspermind/contracts/src/agent-identity/: Cargo.toml  lib.rs
caspermind/contracts/src/compliance-token/: Cargo.toml  lib.rs
caspermind/contracts/src/oracle-registry/: Cargo.toml  lib.rs
caspermind/scripts/: deploy.md
